--- a/views/index.ejs
+++ b/views/index.ejs
@@ -15,9 +15,9 @@
     <div class="jumbotron">
 
         <div class="container">
-            <h1 class="center teal-text text-lighten-2">Crypto Leads</h1>
+            <h1 class="center brand-name">Crypto Leads</h1>
             <div class="row center">
-                <h5 class="header col s12 light">Over 80,000 verified cryptocurrency leads</h5>
+                <h5 class="col s12 light">Over 80,000 verified cryptocurrency leads interested in buying into your cryptocurrency business opportunity</h5>
             </div>
             <div class="row center">
                 <a href="#" class="btn-large waves-effect waves-light teal lighten-1">Buy Leads</a>
