--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,9 +1,14 @@
 .jumbotron {
-    background: url(../img/bg1.jpg);
+    background: url(../img/bg.jpg);
     background-size: cover;
     background-position:left bottom;
     color:#fff;
     width: 100%;
     height: 400px;
-    margin-top:-45px !important;
+    margin-top:-45px;
+}
+
+
+.brand-name {
+    padding-top: 60px;
 }
