--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,17 +11,51 @@
 </head>
 
 <body>
-    
+
     <div class="jumbotron">
 
         <div class="container">
             <h1 class="center brand-name">Crypto Leads</h1>
             <div class="row center">
-                <h5 class="col s12 light">Over 80,000 verified cryptocurrency leads interested in buying into your cryptocurrency business opportunity</h5>
+                <h5 class="col s12 light">Over 80,000 verified cryptocurrency leads interested in learning and buying into your cryptocurrency business opportunity</h5>
             </div>
             <div class="row center">
                 <a href="#" class="btn-large waves-effect waves-light teal lighten-1">Buy Leads</a>
             </div>
+        </div>
+
+    </div>
+
+
+    <div class="container">
+
+        <div class="how-it-works">
+
+            <h1 class="center">How It Works</h1>
+
+            <p class="flow-text">We provide verified and genuine cryptocurrency leads of consumers who are interested in learning and buying into your business opportunity or platform. One of the amazing advantages of our cryptocurrency leads is your ability to reach prospects via their best email address. <br><br> According to this <a href="https://www.huffingtonpost.com/sarah-peterson/why-2017-is-the-year-of-e_1_b_13629718.html" target="_blank">Huffington Post</a>, statistics show that email marketing has one of the highest conversation rates, returning over forty times your investment.
+            </p>
+
+        </div>
+
+    </div>
+
+    <div class="screenshots">
+
+        <div class="container">
+
+            <div class="row">
+
+                <div class="col s12 m12 l12">
+                    <img src="img/one.JPG">
+                </div>
+
+            </div>
+
+            <div class="row center">
+                <a href="#" class="btn-large waves-effect waves-light teal lighten-1">Buy Leads</a>
+            </div>
+
         </div>
 
     </div>
